Removed spacing issue and image issue from clientDashboard and bid respectively

--- a/client/src/pages/Bid/Bid.scss
+++ b/client/src/pages/Bid/Bid.scss
@@ -21,8 +21,8 @@
           height: 70px;
 
           img {
-            width: 100%;
-            height: 100%;
+            width: 70px;
+            height: 70px;
             border-radius: 50%;
             cursor: pointer;
           }
