--- a/client/src/pages/ClientDashboard/ClientDashboard.scss
+++ b/client/src/pages/ClientDashboard/ClientDashboard.scss
@@ -13,6 +13,11 @@
       box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
       padding: 20px;
       margin-bottom: 30px;
+
+      .work-image {
+        height: max-content;
+      }
+
       .client-profile {
         display: flex;
         .user-img {
